--- a/css/about.css
+++ b/css/about.css
@@ -4,6 +4,13 @@
   padding: 0;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
 .navbar {
   width: 100%;
   height: auto;
@@ -70,6 +77,7 @@
   padding: 80px 50px;
   width: 100%;
   padding-top: 210px;
+
 }
 
 .hello-world {
@@ -89,85 +97,109 @@
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   border: 6px solid #fff;
+  background-color: #fff;
   padding: 20px 20px;
   margin-top: 20px;
 }
 
-.event-start {
+.enjoy {
   display: flex;
   justify-content: center;
-  font-size: 24px;
-  padding: 20px 20px;
-  margin-top: 20px; 
+  font-size: 32px;
+  border: none;
+  background: none;
 }
 
-.user-sec {
-background-image: url("/Images/user-sec.jpg");
-width: 100%;
-height: auto;
-padding: 20px 20px;
-}
-
-.date {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(48, 48, 48);
-  margin-bottom: 20px;
-  color: rgb(45, 187, 45);
-  font-size: 30px;
+.sec-logo {
   display: flex;
-  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
-.ticket {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(73, 73, 73);
-  margin-bottom: 20px;
-  color: rgb(169, 170, 169);
-  font-size: 30px;
+.what-logo {
   display: flex;
-  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 10px;
 }
 
-.shop {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(240, 24, 24);
-  margin-bottom: 20px;
-  color: #fff;
-  font-size: 30px;
+.logo-hr {
   display: flex;
-  align-items: center;
-}
-
-.day-pass {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(73, 73, 73);
+  align-self: center;
+  width: 10%;
   margin-bottom: 20px;
-  color: rgb(169, 170, 169);
-  font-size: 30px;
+  border: 2px solid #fc8677;
+
+}
+
+.dis-logo {
+  color: #303030;
+  font-size: 28px;
+  width: 40%;
+  text-align: center;
   display: flex;
-  align-items: center;
+  align-self: center;
 }
 
-.icon-hover:hover {
-  border: 2px solid #fff;
-}
-
-.icon {
-  width: 90px;
+.com-logo {
+  margin-top: 40PX;
+  margin-left: 20%;
+  width: 60%;
   height: auto;
-  margin-right: 30px;
 }
 
-.icon2 {
-  opacity: 50%;
+.line {
+  border: 1px solid #303030;
+  margin-top: 80px;
+  margin-bottom: 40px;
 }
 
-.partner {
-  height: 100px;
+.red-img {
+  justify-content: center;
+  align-items: center;
+  padding: 20px 20px;
+}
+
+.img1 {
+  width: 60%;
+  height: auto;
+  margin: 10px 20% 10px 20%;
+}
+
+.partners {
+  background-color: #414246;
   width: 100%;
-  background-color: rgb(66,65,70);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.partner-logo-container {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 25%;
+}
+.patner-logo {
+  width: 100%;
+  height: auto;
+  margin-right: 20px;
+  opacity: 60%;
+}
+
+.patner2-logo {
+  width: 60%;
+  height: auto;
+  margin-right: 20px;
+  opacity: 60%;
+}
+
+.last-p {
+  margin-left: 30%;
+  color: rgb(134,133,138);
+  font-size: 34px;
 }
