about page created

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #fff;
   position: fixed;
   top: 0;
   left: 0;
@@ -102,54 +101,42 @@
 }
 
 .user-sec {
-background-image: url("/Images/user-sec.jpg");
+background-image: url("../Images/user-sec.jpg");
 width: 100%;
 height: auto;
 padding: 20px 20px;
 }
 
+.program-h1 {
+  text-align: center;
+  font-size: 26px;
+  color: #fdfefd;
+}
+
+.program-hr {
+  width: 10%;
+  border: 1px solid #ec5242;
+  display: flex;
+  justify-content: center;
+  margin: 20px 45%;
+}
+
 .date {
   padding: 20px 40px;
   width: 100%;
-  background-color: rgb(48, 48, 48);
+  background-color: rgba(256,256,256,27%);
   margin-bottom: 20px;
-  color: rgb(45, 187, 45);
-  font-size: 30px;
+  color: #ec5242;
+  font-size: 14px;
   display: flex;
   align-items: center;
 }
 
-.ticket {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(73, 73, 73);
-  margin-bottom: 20px;
-  color: rgb(169, 170, 169);
-  font-size: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.shop {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(240, 24, 24);
-  margin-bottom: 20px;
+.sub-text {
   color: #fff;
-  font-size: 30px;
-  display: flex;
-  align-items: center;
-}
-
-.day-pass {
-  padding: 20px 40px;
-  width: 100%;
-  background-color: rgb(73, 73, 73);
-  margin-bottom: 20px;
-  color: rgb(169, 170, 169);
-  font-size: 30px;
-  display: flex;
-  align-items: center;
+  padding: 10px 10px;
+  margin-left: 10px;
+  font-size: 11px;
 }
 
 .icon-hover:hover {
@@ -162,12 +149,234 @@ padding: 20px 20px;
   margin-right: 30px;
 }
 
-.icon2 {
-  opacity: 50%;
+.partner {
+  width: 100%;
 }
 
-.partner {
-  height: 100px;
-  width: 100%;
-  background-color: rgb(66,65,70);
+.speakers {
+  padding: 10px 20px;
+}
+
+.speaker1-2 {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+}
+
+.speaker6{
+  display: none;
+  flex-direction: row;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.speaker3 {
+  display: none;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.speaker5 {
+  display: none;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.speaker4 {
+  display: none;
+  flex-direction: row;
+  margin-top: 20px;
+}
+
+.speaker6.active {
+  display: flex;
+}
+
+.speaker5.active {
+  display: flex;
+}
+
+.speaker4.active {
+  display: flex;
+}
+
+.speaker3.active {
+  display: flex;
+}
+
+.feacher-speakers {
+  font-size: 26px;
+  color: #0b0031;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.speaker-hr1 {
+  width: 10%;
+  border: 1px solid #ec5242;
+  margin: 10px 45% 50px 45%;
+}
+
+.img-div {
+  width: 90px;
+  height: 80px;
+  background-image: url(../Images/pattern.jpg);
+  margin-right: 40px;
+  padding: 0;
+}
+
+.speaker-img {
+  width: 100px;
+  height: auto;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.s-name {
+  color: #0b0031;
+  margin-top: 10px;
+}
+
+.s-position {
+  color: red;
+  font-size: 10px;
+}
+
+.s-info {
+  font-size: 12px;
+}
+
+.speaker-hr2 {
+  width: 10%;
+  border: 1px solid rgb(0, 1, 43);
+  margin: 5px;
+}
+
+.more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  background-color: #fff;
+  color: #0b0031;
+  height: 50px;
+  margin-left: 10%;
+  margin-bottom: 20px;
+  border: 1px solid #0b0031;
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #fff;
+    height: auto;
+    padding: 20px 20%;
+  }
+
+  .menu-icon {
+    display: none;
+  }
+  .m-menu {
+    display: none;
+  }
+
+  .menu-ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 20px 10px 20px 60px;
+    width: 100%;
+    margin-right: 20px;
+  }
+
+  .links {
+    margin-right: 20px;
+  }
+
+  .close {
+    display: none;
+  }
+
+  .pg1-sec{
+    padding: 20% 10%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+
+  }
+
+  .event-name {
+    width: 90%;
+  }
+
+  .event-dis {
+    width: 60%;
+  }
+
+  .event-start {
+    font-size: 35px;
+    display: flex;
+    align-items: center;
+  }
+
+  .user-sec {
+    padding: 20px 20px;
+  }
+
+  .program-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .date {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-right: 10px;
+    padding: 0;
+  }
+
+  .icon {
+    margin: 20px;
+  }
+
+  .sub-text {
+    width: auto;
+  }
+
+  .speakers {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .speaker1-2 {
+    width: 50%;
+  }
+
+  .speaker3 {
+    display: flex;
+  }
+
+  .speaker4 {
+    display: flex;
+  }
+
+  .speaker5 {
+    display: flex;
+  }
+
+  .speaker6 {
+    display: flex;
+  }
+
+  .more {
+    display: none;
+  }
+
 }
