--- a/css/style.css
+++ b/css/style.css
@@ -350,29 +350,39 @@ padding: 20px 20px;
     width: auto;
   }
 
+  .persons {
+    display: grid;
+  }
+
   .speakers {
-    display: flex;
-    flex-direction: column;
+    grid-template-columns: 1fr 1fr;
   }
 
   .speaker1-2 {
-    width: 50%;
+    width: 45%;
   }
 
   .speaker3 {
     display: flex;
+    width: 45%;
   }
 
   .speaker4 {
     display: flex;
+    width: 45%;
+    grid-column-start: 2;
   }
 
   .speaker5 {
     display: flex;
+    width: 45%;
+    grid-column-start: 2;
   }
 
   .speaker6 {
     display: flex;
+    width: 45%;
+    grid-column-start: 2;
   }
 
   .more {
