--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,32 @@
   border: 3px solid #272a31;
 }
 
+.head-line {
+  display: none;
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #3e3e3e;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 20px 20px;
+}
+
+.head-img {
+  width: 25px;
+  height: auto;
+  display: flex;
+  align-self: center;
+  margin-right: 20px;
+}
+
+.head-link {
+  color: #fff;
+  margin-right: 20px;
+}
+
 .menu-ul {
   list-style: none;
   display: none;
@@ -49,9 +75,13 @@
   margin-top: 20px;
 }
 
+.header-logo {
+  display: none;
+}
+
 .links {
-  padding-top: 10px;
-  margin: 0 0 10px 20px;
+  padding-top: 5px;
+  margin: 0 0 10px 10px;
 }
 
 .menu-links {
@@ -71,16 +101,23 @@
   padding-top: 210px;
 }
 
+@font-face {
+  font-family: cocogoose;
+  src: url(../Images/fonts/Cocogoose.ttf);
+}
+
 .hello-world {
   font-size: 25px;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #ec5242;
   margin-bottom: 10px;
 }
 
 .event-name {
-  font-size: 45px;
-  font-family: 'Crete Round', sans-serif;
+  font-size: 30px;
+  font-family: 'cocogoose', sans-serif;
+  opacity: 90%;
+  width: 75%;
   color: #ec5242;
 }
 
@@ -239,11 +276,11 @@
 
 .s-position {
   color: red;
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .s-info {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .speaker-hr2 {
@@ -271,8 +308,16 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: #fff;
-    height: auto;
-    padding: 20px 20%;
+    height: 55px;
+    padding: 10px 30%;
+  }
+
+  .header-logo{
+    display: block;
+    width: 100px;
+    height: 60px;
+    margin-right: 55%;
+    margin-top: 0;
   }
 
   .menu-icon {
@@ -287,9 +332,13 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    padding: 20px 10px 20px 60px;
+    padding: 50px 10px 20px 5px;
     width: 100%;
-    margin-right: 20px;
+    margin-right: 40%;
+  }
+
+  .head-line {
+    display: flex;
   }
 
   .links {
@@ -350,40 +399,48 @@
     width: auto;
   }
 
-  .persons {
-    display: grid;
+  .persons1 {
+    padding: 10%;
+    background-color: rgb(248,248,248);
   }
 
-  .speakers {
-    grid-template-columns: 1fr 1fr;
+  .persons {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 10%;
+  }
+
+  .first {
+    grid-column: 1;
+  }
+
+  .next {
+    grid-column: 2;
   }
 
   .speaker1-2 {
-    width: 45%;
+    width: 80%;
   }
 
   .speaker3 {
     display: flex;
-    width: 45%;
+    width: 80%;
   }
 
   .speaker4 {
     display: flex;
-    width: 45%;
-    grid-column-start: 2;
+    width: 80%;
   }
 
   .speaker5 {
     display: flex;
-    width: 45%;
-    grid-column-start: 2;
+    width: 80%;
   }
 
   .speaker6 {
     display: flex;
-    width: 45%;
-    grid-column-start: 2;
-  }
+    width: 80%;
+  } 
 
   .more {
     display: none;
