linters errors solved

--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@
     padding: 10px 30%;
   }
 
-  .header-logo{
+  .header-logo {
     display: block;
     width: 100px;
     height: 60px;
@@ -401,7 +401,7 @@
 
   .persons1 {
     padding: 10%;
-    background-color: rgb(248,248,248);
+    background-color: rgb(248, 248, 248);
   }
 
   .persons {
@@ -440,7 +440,7 @@
   .speaker6 {
     display: flex;
     width: 80%;
-  } 
+  }
 
   .more {
     display: none;
