--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,9 @@
 }
 
 .head-img {
-  width: 25px;
-  height: auto;
-  display: flex;
-  align-self: center;
-  margin-right: 20px;
+  color : #fff;
+  font-size: 17px;
+  margin-right: 15px;
 }
 
 .head-link {
@@ -73,11 +71,7 @@
   width: 50px;
   height: 50px;
   margin-top: 20px;
-}
-
-.header-logo {
-  display: none;
-}
+}s
 
 .links {
   padding-top: 5px;
@@ -94,7 +88,9 @@
 }
 
 .pg1-sec {
-  background-image: url("../Images/background.png");
+  background:linear-gradient(45deg,
+  rgba(90, 167, 255, 0.466),
+  rgba(0, 0, 17, 0.9)), url("../Images/background.png");
   height: auto;
   padding: 80px 50px;
   width: 100%;
@@ -293,7 +289,7 @@
   align-items: center;
   justify-content: center;
   width: 80%;
-  background-color: #fff;
+  background-color: rgba(256, 256, 256, 0%);
   color: #0b0031;
   height: 50px;
   margin-left: 10%;
@@ -311,12 +307,10 @@
     padding: 10px 30%;
   }
 
-  .header-logo {
-    display: block;
-    width: 100px;
-    height: 60px;
-    margin-right: 55%;
-    margin-top: 0;
+  .h-logo {
+   color: #ec5242;
+   font-size: 30px;
+   margin-right: 60%;
   }
 
   .menu-icon {
@@ -336,12 +330,25 @@
     margin-right: 40%;
   }
 
+  .worldGame{
+    border: 2px solid #ec5242;
+    padding: 2px 2px;
+  }
+
   .head-line {
     display: flex;
   }
 
   .links {
     margin-right: 20px;
+    margin-top: 5px;
+  }
+
+  .links :hover {
+    padding: 2px 7px;
+    background-color: #ec5242;
+    color: #fff;
+    transition: 0.4s;
   }
 
   .close {
