--- a/css/about.css
+++ b/css/about.css
@@ -1,135 +1,3 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.navbar {
-  width: 100%;
-  height: auto;
-  padding: 10px 10px 20px 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #fff;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-.menu-icon {
-  padding: 30px 10px 10px 20px;
-  width: 43px;
-  height: auto;
-}
-
-.head-line {
-  display: none;
-  width: 100%;
-  height: 50px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #3e3e3e;
-  flex-direction: row;
-  justify-content: flex-end;
-  padding: 20px 20px;
-}
-
-.head-img {
-  width: 25px;
-  height: auto;
-  display: flex;
-  align-self: center;
-  margin-right: 20px;
-}
-
-.head-link {
-  color: #fff;
-  margin-right: 20px;
-}
-
-.m-menu {
-  width: 30px;
-  margin-bottom: 3px;
-  margin-bottom: 10%;
-  border: 3px solid #272a31;
-}
-
-.menu-ul {
-  list-style: none;
-  display: none;
-  flex-direction: column;
-  width: 100%;
-  height: auto;
-  padding-left: 2%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  margin-bottom: 20%;
-}
-
-.close {
-  width: 50px;
-  height: 50px;
-  margin-top: 20px;
-}
-
-.header-logo {
-  display: none;
-}
-
-.links {
-  padding-top: 5px;
-  margin: 0 0 10px 10px;
-}
-
-.menu-links {
-  text-decoration: none;
-  color: #272a31;
-}
-
-.menu-ul.active {
-  display: flex;
-}
-
-.pg1-sec {
-  background-image: url("../Images/background.png");
-  height: auto;
-  padding: 80px 50px;
-  width: 100%;
-  padding-top: 210px;
-}
-
-.hello-world {
-  font-size: 25px;
-  font-family: 'Inter', sans-serif;
-  color: #ec5242;
-  margin-bottom: 10px;
-}
-
-.event-name {
-  font-size: 45px;
-  font-family: 'Crete Round', sans-serif;
-  color: #ec5242;
-}
-
-.event-dis {
-  font-family: 'Inter', sans-serif;
-  font-size: 16px;
-  border: 6px solid #fff;
-  background-color: #fff;
-  padding: 20px 20px;
-  margin-top: 20px;
-}
-
 .enjoy {
   display: flex;
   justify-content: center;
@@ -171,11 +39,11 @@ body {
   align-self: center;
 }
 
-.com-logo {
+.main-logo {
   margin-top: 40px;
-  margin-left: 20%;
-  width: 60%;
-  height: auto;
+  text-align: center;
+  font-size: 200px;
+  color: #ec5242;
 }
 
 .line {
@@ -220,112 +88,34 @@ body {
   width: 80%;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding-left: 25%;
+  padding-left: 35%;
 }
 
-.patner-logo {
-  width: 100%;
-  height: auto;
-  margin-right: 20px;
-  opacity: 60%;
-}
-
-.patner2-logo {
-  width: 60%;
-  height: auto;
-  margin-right: 20px;
-  opacity: 60%;
+.partnerlogo{
+  font-size: 60px;
+  margin: 2px 20px;
 }
 
 .last-part {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  padding: 10px 10%;
+  padding: 0 10%;
 }
 
-.footer-logo {
-  width: 35%;
-  margin-right: 20%;
+.footrt-logo {
+  font-size: 80px;
+  margin:0 20%;
 }
 
 .last-p {
   color: rgb(134, 133, 138);
-  font-size: 24px;
+  font-size: 20px;
   margin-left: 10%;
   width: 100%;
 }
 
 @media (min-width: 768px) {
-  .navbar {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #fff;
-    height: 55px;
-    padding: 10px 30%;
-  }
-
-  .header-logo {
-    display: block;
-    width: 100px;
-    height: 60px;
-    margin-right: 55%;
-    margin-top: 0;
-  }
-
-  .menu-icon {
-    display: none;
-  }
-
-  .m-menu {
-    display: none;
-  }
-
-  .menu-ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    padding: 50px 10px 20px 5px;
-    width: 100%;
-    margin-right: 40%;
-  }
-
-  .head-line {
-    display: flex;
-  }
-
-  .links {
-    margin-right: 20px;
-  }
-
-  .close {
-    display: none;
-  }
-
-  .pg1-sec {
-    padding: 20% 10%;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-  }
-
-  .event-name {
-    width: 90%;
-  }
-
-  .event-dis {
-    width: 60%;
-  }
-
-  .event-start {
-    font-size: 35px;
-    display: flex;
-    align-items: center;
-  }
-
   .red-img {
     display: flex;
     flex-direction: row;
